// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading component rendering shows content 1`] = `
<div>
  <a
    href="#"
  >
    Some link
  </a>
</div>
`;

exports[`Loading component rendering shows spinner 1`] = `
<div>
  <div
    class="spinner"
  >
    Loading...
  </div>
</div>
`;

exports[`Loading component rendering shows spinner with applied extra props 1`] = `
<div>
  <div
    class="spinner additional-class"
  >
    Loading...
  </div>
</div>
`;
